<resources>
    <string name="app_name">CookTails</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="details_header">Cocktail Name</string>
    <string name="image">image</string>
    <string name="type">Type:</string>
    <string name="alcohol">Alcohol:</string>
    <string name="glass">Glass:</string>
    <string name="how_to_do">How to do:</string>
    <string name="_10_random_cocktails">10 random cocktails</string>
    <string name="all_cocktails">All Cocktails</string>
    <string name="_10_random">10 Random</string>
    <string name="browse">Browse</string>
    <string name="only_non_alcoholic">Only non-alcoholic</string>
    <string name="search">Search</string>
    <string name="no_usages_found">No usages found</string>
</resources>