<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    android:background="?colorPrimary"
    tools:context=".mainFragment.MainFragment">

    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_view"
                android:layout_margin="@dimen/general_focused_margin"
                android:tooltipText="Search..."
                android:layout_width="match_parent"
                android:layout_weight="1"

                android:searchIcon="@drawable/ic_action_name"
                android:layout_height="wrap_content"
                style="@style/SearchViewStyle"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/general_focused_margin"
                android:layout_weight="2.5"
                app:strokeColor="@color/white"
                android:textColor="@color/white"
                android:textSize="@dimen/btn_text_size"
                android:text="@string/search"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <CheckBox
                android:id="@+id/non_alcoholic_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/general_focused_margin"
                android:textSize="@dimen/btn_text_size"
                app:strokeColor="@color/white"
                android:textColor="@color/white"
                android:text="@string/only_non_alcoholic"
                />

        </LinearLayout>



    </LinearLayout>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/general_small_margin"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_browse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/browse"
            android:textSize="@dimen/btn_text_size"
            android:layout_weight="1"
            app:strokeColor="@color/white"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/general_focused_margin"
            android:layout_marginEnd="@dimen/general_small_margin"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10_random"
            app:strokeColor="@color/white"
            android:textColor="@color/white"

            android:textSize="@dimen/btn_text_size"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/general_small_margin"
            android:layout_marginStart="@dimen/general_small_margin"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_cocktails"
            android:textSize="@dimen/btn_text_size"
            app:strokeColor="@color/white"
            android:textColor="@color/white"

            android:layout_weight="1"
            android:layout_marginEnd="@dimen/general_focused_margin"
            android:layout_marginStart="@dimen/general_small_margin"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/rv_list_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_10_random_cocktails"
            android:textAlignment="center"
            android:textSize="@dimen/rv_header_text_size"
            android:layout_margin="@dimen/general_small_margin"
            />

        <TextView
            android:id="@+id/textView_cocktails_count"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text=""
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/general_focused_margin"
            />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/textView_not_found"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/no_usages_found"
            android:textColor="#9C9C9C"
            android:visibility="gone"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/main_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:layout_marginTop="@dimen/general_small_margin"
            />

    </FrameLayout>


</LinearLayout>